# polypix

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  zensical.toml
.github/workflows/: codspeed.yml  docs.yml  release.yml  run-tests.yml
benchmarks/: test_polypix_benchmarks.py
ci/: install_3rdparty.sh
ci/licenses/: CFITSIO.txt  permissive-runtime-notices.txt
docs/: api.md  concepts.md  development.md  index.md  install.md
polypix/: __init__.py  __init__.pyi  _core.pyi  bench.py
src/polypix/: core.cpp  core.h  module.cpp
tests/: test_polypix.py
